; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_atm_diagnostic_flag.c__mutate_atm_diagnostic_flag.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_atm_diagnostic_flag.c__mutate_atm_diagnostic_flag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [42 x i8] c"Try to set ATM diagnostic flag to: 0x%08x\00", align 1
@KERN_SUCCESS = common dso_local global i64 0, align 8
@_needs_reset = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32)* @_mutate_atm_diagnostic_flag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @_mutate_atm_diagnostic_flag(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @T_LOG(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = call i32 (...) @mach_host_self()
  %7 = load i32, i32* %2, align 4
  %8 = call i64 @host_set_atm_diagnostic_flag(i32 %6, i32 %7)
  store i64 %8, i64* %3, align 8
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @KERN_SUCCESS, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  store i32 1, i32* @_needs_reset, align 4
  br label %13

13:                                               ; preds = %12, %1
  %14 = load i64, i64* %3, align 8
  ret i64 %14
}

declare dso_local i32 @T_LOG(i8*, i32) #1

declare dso_local i64 @host_set_atm_diagnostic_flag(i32, i32) #1

declare dso_local i32 @mach_host_self(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
